fixed nav link alignment

--- a/src/app/main/components/layout/navigation/nav-link/nav-link.component.scss
+++ b/src/app/main/components/layout/navigation/nav-link/nav-link.component.scss
@@ -4,6 +4,7 @@
     padding: 1.5rem  !important;
     display: flex;
     align-items: center;
+    justify-content: flex-start;
 
     &-icon {
         height: 100%;
